# palrun

./: .commitlintrc.json  .gitignore  .palrun.toml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  rust-toolchain.toml
.githooks/: commit-msg  install.sh  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  homebrew-update.yml  release.yml
HomebrewFormula/: palrun.rb
aur/: PKGBUILD  PKGBUILD.git  README.md
benches/: benchmarks.rs
docs/: README.md  configuration.md  environment-variables.md  faq.md  getting-started.md  installation.md  quick-reference.md  troubleshooting.md  user-guide.md
docs/examples/: README.md
docs/features/: project-setup.md
docs/guides/: README.md  ai-generate-commands.md  ai-setup.md  creating-runbooks.md  finding-commands.md  monorepos.md  setup.md  shell-integration.md
docs/reference/: README.md  cli-reference.md  keyboard-shortcuts.md  project-types.md
docs/tutorials/: 01-first-command-palette.md
examples/: README.md
examples/config/: PALRUN.md  ai-claude.toml  ai-openai.toml  palrun-secrets.toml.example  palrun.toml
examples/configs/: README.md  basic.toml  monorepo.toml  nodejs.toml  rust.toml
examples/integrations/: README.md
examples/integrations/nextjs/: .palrun.toml
examples/integrations/nextjs/.palrun/runbooks/: deploy.yml
examples/plugins/cargo-scanner/: Cargo.toml  plugin.toml
examples/plugins/cargo-scanner/src/: lib.rs
examples/plugins/composer-scanner/: Cargo.toml  plugin.toml
examples/plugins/composer-scanner/src/: lib.rs
examples/plugins/gradle-scanner/: Cargo.toml  README.md  plugin.toml
examples/plugins/gradle-scanner/src/: lib.rs
examples/plugins/maven-scanner/: Cargo.toml  plugin.toml
examples/plugins/maven-scanner/src/: lib.rs
examples/plugins/palrun-plugin-sdk/: Cargo.toml  README.md
examples/plugins/palrun-plugin-sdk/src/: command.rs  context.rs  error.rs  ffi.rs  lib.rs  prelude.rs  scanner.rs
examples/plugins/plugin-template/: Cargo.toml  Makefile  README.md  build.sh  plugin.toml
examples/plugins/plugin-template/src/: lib.rs
examples/plugins/poetry-scanner/: Cargo.toml  plugin.toml
examples/plugins/poetry-scanner/src/: lib.rs
examples/runbooks/: README.md  deploy-env.yml  deploy-simple.yml  dev-setup.yml
homebrew-tap/: README.md
homebrew-tap/Formula/: palrun.rb
npm/: README.md  package.json
npm/scripts/: install.js  uninstall.js
scripts/: install.sh  palrun.rb  release.sh  version-bump.sh
shell/: palrun.bash  palrun.fish  palrun.ps1  palrun.zsh
src/: app.rs  lib.rs  main.rs
src/ai/: agent.rs  azure.rs  claude.rs  context.rs  executor.rs  grok.rs  mod.rs  ollama.rs  openai.rs  routing.rs
src/commands/: mod.rs  registry.rs  target.rs
src/commands/targets/: aider.rs  claude.rs  continue_dev.rs  cursor.rs  mod.rs  windsurf.rs
src/core/: analytics.rs  background.rs  capture.rs  chain.rs  command.rs  config.rs  context.rs  degradation.rs  executor.rs  filter.rs  history.rs  mod.rs  network.rs  offline.rs  parallel.rs  registry.rs  resilience.rs  retry.rs  trust.rs
src/env/: mod.rs  secrets.rs  version.rs
src/git/: hooks.rs  mod.rs
src/init/: detector.rs  mod.rs  runbooks.rs  templates.rs
src/integrations/: api.rs  github_actions.rs  github_issues.rs  linear.rs  mod.rs  notifications.rs  webhooks.rs
src/mcp/: client.rs  manager.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/plugin/: error.rs  host.rs  manager.rs  manifest.rs  mod.rs  registry.rs  runtime.rs  types.rs
src/runbook/: mod.rs  parser.rs  runner.rs  schema.rs
src/scanner/: builtin.rs  cargo.rs  docker.rs  git.rs  go_lang.rs  makefile.rs  mcp.rs  mod.rs  npm.rs  nx.rs  python.rs  taskfile.rs  turbo.rs
src/security/: mod.rs  permissions.rs  sanitization.rs  secrets.rs  validation.rs
src/tui/: app.rs  input.rs  mod.rs  theme.rs  ui.rs
src/workflow/: analysis.rs  context.rs  documents.rs  executor.rs  mod.rs  planning.rs
tests/: cli_integration.rs  integration_setup.rs  performance_tests.rs  resilience_integration.rs  security_integration.rs
