[package]
name = "cargo-scanner"
version = "0.1.0"
edition = "2021"
description = "Cargo scanner plugin for Palrun"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Minimal dependencies for WASM plugin
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
strip = true
