[package]
name = "palrun-plugin-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["GLINR <hello@glinr.com>"]
description = "SDK for building Palrun plugins with WASM"
license = "MIT"
repository = "https://github.com/GLINCKER/palrun"
homepage = "https://glinr.com/palrun"
readme = "README.md"
keywords = ["palrun", "plugin", "wasm", "sdk", "scanner"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# For testing without WASM
tokio = { version = "1", features = ["test-util", "macros"] }

[features]
default = []
# Enable all helper macros
macros = []

[profile.release]
opt-level = "s"
lto = true
strip = true
