[package]
name = "my-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Your Name <your@email.com>"]
description = "A custom scanner plugin for Palrun"
license = "MIT"
# Uncomment to publish
# repository = "https://github.com/your-username/my-scanner"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Palrun Plugin SDK
palrun-plugin-sdk = { path = "../palrun-plugin-sdk" }

# JSON serialization (required)
serde_json = "1"

# Add other dependencies as needed:
# toml = "0.8"      # For parsing TOML files
# regex = "1"       # For pattern matching
# serde_yaml = "0.9" # For parsing YAML files

[profile.release]
# Optimize for size (important for WASM)
opt-level = "s"
# Enable link-time optimization
lto = true
# Strip debug symbols
strip = true
# Single codegen unit for better optimization
codegen-units = 1
